--- a/atividade-5-pesquisa.html/index.html
+++ b/atividade-5-pesquisa.html/index.html
@@ -10,5 +10,10 @@
       <h2>Vamos ver um exemplo:</h2>
       <p>Olha como está esse texto, insira muchas informações aqui</p>
       <p><small>Esse textinho ta bem pequeno, insira alguma informação complementar ou não muito importante aqui</small></p>
+      <h2>Um outro exemplo selvagem apareceu!</h2>
+      <img src= "placeholder.png" height="50" width="50">
+      <small>olha que legau essa imagem</small>
+      <p>Confira o site de quem eu acabei aprendendo isso clicando <a href="https://www.w3schools.com/html/html_formatting.asp">nesse texto</a></p>
+      <p>E também um <a href="https://www.youtube.com/watch?v=2IEzuAeDfHc">vídeo</a>,caso queira.</p>
     </body>
   
