agora sim ta certo

--- a/atividade-5-pesquisa.html/index.html
+++ b/atividade-5-pesquisa.html/index.html
@@ -5,7 +5,7 @@
       <title>Elementos <b>HTML</b></title>
     </head>
     <body>
-      <h1>O seria o elemento <small>?</h1>
+      <h1>O seria o elemento small?</h1>
       <p>Esse elemento é bem usado para certas ocasiões, como deixar um texto não tão importante menos visível, ou colocar uma informaçãozinha pequena embaixo de uma imagem ou quanquer coisa que tiver muita informação, tipo um complemento.</p>
       <h2>Vamos ver um exemplo:</h2>
       <p>Olha como está esse texto, insira muchas informações aqui</p>
