--- a/site-do-grupo.html
+++ b/site-do-grupo.html
@@ -11,7 +11,7 @@
 
 <div class="p-5 bg-primary text-white text-center">
   <h1>Página do nosso grupo</h1>
-  <p>Resize this responsive page to see the effect!</p> 
+  <p></p> 
 </div>
 
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
@@ -36,12 +36,11 @@
 <div class="container mt-5">
   <div class="row">
     <div class="col-sm-4">
-      <h2>About Me</h2>
-      <h5>Photo of me:</h5>
+      <h2>Sobre nós</h2>
       <div class="fakeimg">Fake Image</div>
-      <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
-      <h3 class="mt-4">Some Links</h3>
-      <p>Lorem ipsum dolor sit ame.</p>
+      <p>não sei oq colocar aqui por enquanto</p>
+      <h3 class="mt-4">Texto</h3>
+      <p>texto texto</p>
       <ul class="nav nav-pills flex-column">
         <li class="nav-item">
           <a class="nav-link active" href="#">Active</a>
@@ -59,23 +58,15 @@
       <hr class="d-sm-none">
     </div>
     <div class="col-sm-8">
-      <h2>TITLE HEADING</h2>
-      <h5>Title description, Dec 7, 2020</h5>
-      <div class="fakeimg">Fake Image</div>
-      <p>Some text..</p>
-      <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-
-      <h2 class="mt-5">TITLE HEADING</h2>
-      <h5>Title description, Sep 2, 2020</h5>
-      <div class="fakeimg">Fake Image</div>
-      <p>Some text..</p>
-      <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+      <h2>Primeiramente, quem está aqui?????</h2>
+      <p>Seriamos nós..</p>
+      <p>Rafael Trechinski, Rafaela, João Guilherme, João Lucas, Marya, Leidhiel, larissa, Letícia e Isabele.</p>
     </div>
   </div>
 </div>
 
 <div class="mt-5 p-4 bg-dark text-white text-center">
-  <p>Footer</p>
+  <p>Cabeçalho</p>
 </div>
 
 </body>
