--- a/site-do-grupo.html
+++ b/site-do-grupo.html
@@ -37,7 +37,6 @@
   <div class="row">
     <div class="col-sm-4">
       <h2>Sobre nós</h2>
-      <div class="fakeimg">Fake Image</div>
       <p>não sei oq colocar aqui por enquanto</p>
       <h3 class="mt-4">Texto</h3>
       <p>texto texto</p>
@@ -60,7 +59,7 @@
     <div class="col-sm-8">
       <h2>Primeiramente, quem está aqui?????</h2>
       <p>Seriamos nós..</p>
-      <p>Rafael Trechinski, Rafaela, João Guilherme, João Lucas, Marya, Leidhiel, larissa, Letícia e Isabele.</p>
+      <p>Rafael Trechinski, Rafaela, João Guilherme, João Lucas, Marya, Leidhiel, Larissa, Letícia e Isabele.</p>
     </div>
   </div>
 </div>
