--- a/site-do-grupo.html
+++ b/site-do-grupo.html
@@ -10,28 +10,9 @@
 <body>
 
 <div class="p-5 bg-primary text-white text-center">
-  <h1>Página do nosso grupo</h1>
+  <h1>Capivaras!!!!!!!!!!!!!!!!</h1>
   <p></p> 
 </div>
-
-<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-  <div class="container-fluid">
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link active" href="#">Active</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#">Disabled</a>
-      </li>
-    </ul>
-  </div>
-</nav>
 
 <div class="container mt-5">
   <div class="row">
@@ -59,7 +40,7 @@
     <div class="col-sm-8">
       <h2>Primeiramente, quem está aqui?????</h2>
       <p>Seriamos nós..</p>
-      <p>Rafael Trechinski, Rafaela, João Guilherme, João Lucas, Marya, Leidhiel, Larissa, Letícia e Isabele.</p>
+      <p>Rafael Trechinski, Rafaela, João Guilherme, João Lucas, Marya, Leidhiel, Larissa, Letícia, Isabele e Vinicius.</p>
     </div>
   </div>
 </div>
