--- a/site-do-grupo.html
+++ b/site-do-grupo.html
@@ -38,16 +38,10 @@
       <hr class="d-sm-none">
     </div>
     <div class="col-sm-8">
-      <h2>Primeiramente, quem está aqui?????</h2>
-      <p>Seriamos nós..</p>
+      <h2>Quem somos nós?</h2>
+      <p>Membros do grupo:</p>
       <p>Rafael Trechinski, Rafaela, João Guilherme, João Lucas, Marya, Leidhiel, Larissa, Letícia, Isabele e Vinicius.</p>
     </div>
   </div>
-</div>
-
-<div class="mt-5 p-4 bg-dark text-white text-center">
-  <p>Cabeçalho</p>
-</div>
-
 </body>
 </html>
