--- a/site-do-grupo.html
+++ b/site-do-grupo.html
@@ -18,9 +18,9 @@
   <div class="row">
     <div class="col-sm-4">
       <h2>Sobre nós</h2>
-      <p>não sei oq colocar aqui por enquanto</p>
-      <h3 class="mt-4">Texto</h3>
-      <p>texto texto</p>
+      <p>placeholder</p>
+      <h3 class="mt-4">placeholder</h3>
+      <p>vou ver oq querem deixar nesses placeholders</p>
       <ul class="nav nav-pills flex-column">
         <li class="nav-item">
           <a class="nav-link active" href="#">Active</a>
