--- a/site-do-grupo.html
+++ b/site-do-grupo.html
@@ -8,9 +8,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-
 <div class="p-5 bg-primary text-white text-center">
-  <h1>Capivaras!!!!!!!!!!!!!!!!</h1>
+  <h1>Capivaras</h1>
   <p></p> 
 </div>
 
@@ -21,19 +20,6 @@
       <p>placeholder</p>
       <h3 class="mt-4">placeholder</h3>
       <p>vou ver oq querem deixar nesses placeholders</p>
-      <ul class="nav nav-pills flex-column">
-        <li class="nav-item">
-          <a class="nav-link active" href="#">Active</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#">Disabled</a>
-        </li>
       </ul>
       <hr class="d-sm-none">
     </div>
@@ -42,6 +28,15 @@
       <p>Membros do grupo:</p>
       <p>Rafael Trechinski, Rafaela, João Guilherme, João Lucas, Marya, Leidhiel, Larissa, Letícia, Isabele e Vinicius.</p>
     </div>
+    <div class="container mt-3">
+  <h2>Simple Collapsible</h2>
+  <p>Click on the button to toggle between showing and hiding content.</p>
+  <button type="button" class="btn btn-primary" data-bs-toggle="collapse" data-bs-target="#demo">Simple collapsible</button>
+  <div id="demo" class="collapse">
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+  </div>
   </div>
 </body>
 </html>
