--- a/site-do-grupo.html
+++ b/site-do-grupo.html
@@ -8,34 +8,15 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-<div class="p-5 bg-primary text-white text-center">
+  <div class="p-5 bg-primary text-white text-center">
   <h1>Capivaras</h1>
   <p></p> 
 </div>
-
-<div class="container mt-5">
-  <div class="row">
-    <div class="col-sm-4">
-      <h2>Sobre nós</h2>
-      <p>placeholder</p>
-      <h3 class="mt-4">placeholder</h3>
-      <p>vou ver oq querem deixar nesses placeholders</p>
-      </ul>
-      <hr class="d-sm-none">
-    </div>
-    <div class="col-sm-8">
-      <h2>Quem somos nós?</h2>
-      <p>Membros do grupo:</p>
-      <p>Rafael Trechinski, Rafaela, João Guilherme, João Lucas, Marya, Leidhiel, Larissa, Letícia, Isabele e Vinicius.</p>
-    </div>
-    <div class="container mt-3">
-  <h2>Simple Collapsible</h2>
-  <p>Click on the button to toggle between showing and hiding content.</p>
+  <div class="container mt-3">
+  <h2>Membros do grupo</h2>
   <button type="button" class="btn btn-primary" data-bs-toggle="collapse" data-bs-target="#demo">Simple collapsible</button>
   <div id="demo" class="collapse">
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+    Rafael Trechinski, Rafaela, João Guilherme, João Lucas, Marya Leidhiel, Larissa, Letícia, Isabele e Vinicius.
   </div>
   </div>
 </body>
