--- a/site-do-grupo.html
+++ b/site-do-grupo.html
@@ -8,15 +8,31 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
+  <nav class="navbar navbar-expand-sm bg-light">
+
+  <div class="container-fluid">
+    <ul class="navbar-nav">
+    </ul>
+  </div>
+
   <div class="p-5 bg-primary text-white text-center">
   <h1>Capivaras</h1>
   <p></p> 
 </div>
   <div class="container mt-3">
-  <h2>Membros do grupo</h2>
+  <h2>Mostrar</h2>
   <button type="button" class="btn btn-primary" data-bs-toggle="collapse" data-bs-target="#demo">Simple collapsible</button>
   <div id="demo" class="collapse">
-    Rafael Trechinski, Rafaela, João Guilherme, João Lucas, Marya Leidhiel, Larissa, Letícia, Isabele e Vinicius.
+    Rafael Trechinski
+    Rafaela
+    João Guilherme
+    João Lucas
+    Marya
+    Leidhiel
+    Larissa
+    Letícia
+    Isabele
+    Vinicius
   </div>
   </div>
 </body>
