--- a/site-do-grupo.html
+++ b/site-do-grupo.html
@@ -13,8 +13,8 @@
   <p></p> 
 </div>
   <div class="container mt-3">
-  <h2>Mostrar</h2>
-  <button type="button" class="btn btn-primary" data-bs-toggle="collapse" data-bs-target="#demo">Simple collapsible</button>
+  <h2>Membros do grupo</h2>
+  <button type="button" class="btn btn-primary" data-bs-toggle="collapse" data-bs-target="#demo">Mostrar</button>
   <div id="demo" class="collapse">
     Rafael Trechinski
     Rafaela
