--- a/site-do-grupo.html
+++ b/site-do-grupo.html
@@ -16,16 +16,16 @@
   <h2>Membros do grupo</h2>
   <button type="button" class="btn btn-primary" data-bs-toggle="collapse" data-bs-target="#demo">Mostrar</button>
   <div id="demo" class="collapse">
-    Rafael Trechinski
-    Rafaela
-    João Guilherme
-    João Lucas
-    Marya
-    Leidhiel
-    Larissa
-    Letícia
-    Isabele
-    Vinicius
+    Rafael Trechinski,
+    Rafaela,
+    João Guilherme,
+    João Lucas,
+    Marya,
+    Leidhiel,
+    Larissa,
+    Letícia,
+    Isabele e
+    Vinicius.
   </div>
   </div>
 </body>
