--- a/site-do-grupo.html
+++ b/site-do-grupo.html
@@ -16,7 +16,7 @@
   <h2>Membros do grupo</h2>
   <button type="button" class="btn btn-primary" data-bs-toggle="collapse" data-bs-target="#demo">Mostrar</button>
   <div id="demo" class="collapse">
-    Rafael Trechinski, Rafaela, João Guilherme, João Lucas, Marya, Leidhiel, Larissa, Letícia, Isabele e Vinicius.
+    Rafael Trechinski, Rafaela, João Guilherme, João Lucas, Marya, Leidhiel, Larissa, Letícia, Isabelly e Vinicius.
   </div>
   </div>
 </body>
